--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -16,12 +16,12 @@ clusterGroup:
       channel: stable
       source: redhat-operators
       sourceNamespace: openshift-marketplace
-    #istio:
-    #  name: servicemeshoperator
-    #  namespace: openshift-operators
-    #  channel: stable
-    #  source: redhat-operators
-    #  sourceNamespace: openshift-marketplace
+    istio:
+      name: servicemeshoperator
+      namespace: openshift-operators
+      channel: stable
+      source: redhat-operators
+      sourceNamespace: openshift-marketplace
     nfd:
       name: nfd
       namespace: openshift-nfd
@@ -67,17 +67,17 @@ clusterGroup:
   #   - '/overrides/values-{{ $.Values.global.hubClusterDomain }}.yaml'
   #   - '/overrides/values-{{ $.Values.global.localClusterDomain }}.yaml'
   applications:
-    #nfd-config:
-    #  name: nfd-config
-    #  namespace: openshift-nfd
-    #  project: openshift-ai
-    #  path: charts/all/nfd-config
+    nfd-config:
+      name: nfd-config
+      namespace: openshift-nfd
+      project: openshift-ai
+      path: charts/all/nfd-config
 
-    #nvidia-config:
-    #  name: nvidia-config
-    #  namespace: nvidia-gpu-operator
-    #  project: openshift-ai
-    #  path: charts/all/nvidia-gpu-config
+    nvidia-config:
+      name: nvidia-config
+      namespace: nvidia-gpu-operator
+      project: openshift-ai
+      path: charts/all/nvidia-gpu-config
 
     #rhoai-config:
     #  name: rhoai-config
