--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -44,7 +44,7 @@ clusterGroup:
     #  source: redhat-operators
     #  sourceNamespace: openshift-marketplace
 
-  projects
+  projects:
     - hub
     - openshift-ai
   # Explicitly mention the cluster-state based overrides we plan to use for this pattern.
