--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -2,7 +2,7 @@ clusterGroup:
   name: hub
   isHubCluster: true
   namespaces:
-    #- openshift-serverless
+    - openshift-serverless
     #- openshift-operators
     - openshift-nfd
     - nvidia-gpu-operator
@@ -10,12 +10,12 @@ clusterGroup:
     - vault
     - golang-external-secrets
   subscriptions:
-    #knative:
-    #  name: serverless-operator
-    #  namespace: openshift-serverless
-    #  channel: stable
-    #  source: redhat-operators
-    #  sourceNamespace: openshift-marketplace
+    serverless:
+      name: serverless-operator
+      namespace: openshift-serverless
+      channel: stable
+      source: redhat-operators
+      sourceNamespace: openshift-marketplace
     istio:
       name: servicemeshoperator
       namespace: openshift-operators
@@ -92,6 +92,7 @@ clusterGroup:
       project: hub
       chart: hashicorp-vault
       chartVersion: 0.1.*
+
     golang-external-secrets:
       name: golang-external-secrets
       namespace: golang-external-secrets
