--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -2,11 +2,11 @@ clusterGroup:
   name: hub
   isHubCluster: true
   namespaces:
-    #- openshift-serverless
+    - openshift-serverless
     #- openshift-operators
     - openshift-nfd
     - nvidia-gpu-operator
-    #- redhat-ods-operator
+    - redhat-ods-operator
     - vault
     - golang-external-secrets
   subscriptions:
