try alpha for rhoai

--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -39,7 +39,7 @@ clusterGroup:
     rhoai:
       name: rhods-operator
       namespace: redhat-ods-operator
-      channel: stable
+      channel: alpha
       source: redhat-operators
       sourceNamespace: openshift-marketplace
 
