tricks for the namespace of the RHOAI

--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -6,6 +6,8 @@ clusterGroup:
     - openshift-nfd
     - nvidia-gpu-operator
     - redhat-ods-operator
+        operatorGroup: true
+        targetNamespaces:
     - vault
     - golang-external-secrets
   subscriptions:
