--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -5,7 +5,7 @@ clusterGroup:
     - openshift-serverless
     - openshift-nfd
     - nvidia-gpu-operator
-    - redhat-ods-operator
+    - redhat-ods-operator:
         operatorGroup: true
         targetNamespaces:
     - vault
