--- a/values-secret.yaml.template
+++ b/values-secret.yaml.template
@@ -14,6 +14,13 @@ secrets:
       onMissingValue: generate
       vaultPolicy: validatedPatternDefaultPolicy
 
+  - name: minio-secret
+    fields:
+    - name: minio_root_user
+      value: minio
+    - name: minio_root_password
+      value: minio_1_2_3
+
   # If you use clusterPools you will need to uncomment the following lines
   #- name: aws
   #  fields:
