--- a/values-secret.yaml.template
+++ b/values-secret.yaml.template
@@ -21,6 +21,13 @@ secrets:
     - name: minio_root_password
       value: minio_1_2_3
 
+  - name: openai-keys
+    fields:
+    - name: OPENAI_API_BASE
+      value: FIXME
+    - name: OPENAI_API_KEY
+      value: FIXME
+
   # If you use clusterPools you will need to uncomment the following lines
   #- name: aws
   #  fields:
