Add datascience secrets

--- a/charts/all/rag/values.yaml
+++ b/charts/all/rag/values.yaml
@@ -2,3 +2,10 @@
 secretStore:
   name: vault-backend
   kind: ClusterSecretStore
+
+bucketSecrets:
+  - localdocs
+
+s3:
+  default_endpoint: http://minio-service.minio-ns.svc.cluster.local:9000
+  default_region: none
