--- a/charts/all/rag/values.yaml
+++ b/charts/all/rag/values.yaml
@@ -8,5 +8,9 @@ bucketSecrets:
 
 s3:
   default_endpoint: http://minio-service.minio-ns.svc.cluster.local:9000
-  default_host: minio-service.minio-ns.svc.cluster.local:9000
   default_region: none
+
+pipeline:
+  default_host: minio-service.minio-ns.svc.cluster.local:9000
+  scheme: http
+  bucket: pipelines
