--- a/charts/all/rag/values.yaml
+++ b/charts/all/rag/values.yaml
@@ -11,6 +11,7 @@ s3:
   default_region: none
 
 pipeline:
-  default_host: minio-service.minio-ns.svc.cluster.local:9000
+  default_host: minio-service.minio-ns.svc.cluster.local
   scheme: http
   bucket: pipelines
+  port: 9000
