Set DISABLE_DSC_CONFIG to True
This disables the automatic creation of DSCI, which might spawn a
servicemeshcontrolplane CR that might interfere during the installation
of the modelmesh subscription

--- a/values-hub.yaml
+++ b/values-hub.yaml
@@ -54,6 +54,10 @@ clusterGroup:
       channel: alpha
       source: redhat-operators
       sourceNamespace: openshift-marketplace
+      config:
+        env:
+          - name: DISABLE_DSC_CONFIG
+            value: "True"
 
   projects:
     - hub
