--- a/values-global.yaml
+++ b/values-global.yaml
@@ -9,4 +9,6 @@ main:
   clusterGroupName: hub
   multiSourceConfig:
     enabled: true
-    clusterGroupChartVersion: "0.9.*"
+    # clusterGroupChartVersion: "0.9.*"
+    clusterGroupGitRepoUrl: https://github.com/mbaldessari/clustergroup-chart
+    clusterGroupChartGitRevision: syncwaves-test
